# sgba_simulation

./: CMakeLists.txt  analyse.py  package.xml  result_four_uavs.txt  result_three_uavs.txt  result_two_uavs.txt
include/: base_planner.h  sgba_back_planner.h  sgba_bug_grid.h  sgba_bug_main.h  sgba_bug_planner.h  sgba_exception.h  sgba_simulation.h  sgba_uav.h  utiltool.h
launch/: four_uav_explore.launch  one_uav_explore.launch  start_simulation.launch  three_uav_explore.launch  two_uav_explore.launch
path_log  cpoy/15_30_world/four_uavs/: uav1.txt  uav2.txt  uav3.txt
path_log  cpoy/15_30_world/two_uavs/: uav0.txt
path_log  cpoy/20_20_world/four_uavs/: uav2.txt  uav3.txt
path_log  cpoy/20_20_world/two_uavs/: uav1.txt
path_log  cpoy/20_40_world/four_uavs/: uav0.txt  uav3.txt
path_log  cpoy/30_15_world/four_uavs/: uav1.txt
path_log  cpoy/40_20_world/two_uavs/: uav1.txt
path_log  cpoy/40_40_world/four_uavs/: uav0.txt
path_log/15_30_world/four_uavs/: uav0.txt
path_log/20_20_world/three_uavs/: uav0.txt
path_log/20_40_world/four_uavs/: uav1.txt
path_log/20_40_world/three_uavs/: uav2.txt
path_log/30_15_world/four_uavs/: uav3.txt
path_log/30_15_world/three_uavs/: uav0.txt  uav2.txt
path_log/30_30_world/four_uavs/: uav3.txt
path_log/30_30_world/three_uavs/: uav2.txt
path_log/40_20_world/four_uavs/: uav0.txt  uav1.txt  uav2.txt  uav3.txt
path_log/40_40_world/four_uavs/: uav3.txt
path_log/40_40_world/three_uavs/: uav1.txt  (+1 more)
src/: sgba_back_planner.cpp  sgba_bug_grid.cpp  sgba_bug_main.cpp  sgba_bug_planner.cpp  sgba_simulation.cpp  sgba_uav.cpp
